<resources>
    <string name="app_name">Newsuty</string>
    <string name="Destacados">Destacados</string>
    <string name="ultimaHora">Última hora</string>
    <string name="MisNoticias">Mis noticias</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_register">RegisterActivity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="email">email</string>
    <string name="password">password</string>
    <string name="login">login</string>
    <string name="register">register</string>
    <string name="url">url</string>
    <string name="AddNews">Añadir Noticia</string>
    <string name="salir">Salir</string>
    <string name="ok">ok</string>
    <string name="ingles">Ingles</string>
    <string name="vota_dislike">Vota Dislike</string>
    <string name="vota_like">Vota Like</string>
    <string name="borrar">Borrar</string>
    <string name="espa_ol">Español</string>
    <string name="cancelar">Cancelar</string>
    <string name="cambiar">Cambiar</string>
    <string name="cambiar_idioma">Cambiar Idioma</string>
    <string name="selecciona_el_idioma_de_las_noticias">Selecciona el idioma de las noticias</string>
    <string name="hacer_foto">Hacer foto</string>
    <string name="titulo">Titulo</string>
    <string name="noticia_add">Noticia añadida</string>
    <string name="noticia_add_err">Error al añadir la noticia</string>
    <string name="noticia_add_err_title">Debes añadir un título antes de hacer la foto</string>
    <string name="Registro">Registro correcto</string>
    <string name="Registro_err">Registro incorrecto</string>
    <string name="Registro_err_google">Fallo en el servicio de google</string>
    <string name="Registro_err_empty">Introduzca un usuario y/o contraseña</string>
    <string name="Registro_err_err">Error</string>
    <string name="Registro_nesw_del">Noticia eliminada</string>
    <string name="Registro_nesw_del_permision">No puedes eliminar una noticia que no te pertenece</string>
    <string name="news_vote">has votado correctamente</string>
    <string name="news_vote_del">Voto borrado</string>
    <string name="news_vote_del_first">Ya has votado en esta noticia, para cambiar el voto tienes que borrarlo primero</string>
</resources>